# grabtl

./: CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  NOTICE  README.ja.md  README.md  SECURITY.md  pyproject.toml
.claude/: settings.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: architecture.md  plugin-guide.md  release.md  roadmap.md  security-design.md
src/grabtl/: __init__.py
src/grabtl/cli/: __init__.py  main.py
src/grabtl/core/: __init__.py  pipeline.py
src/grabtl/core/capture/: __init__.py  screen.py
src/grabtl/core/ocr/: __init__.py  base.py  winocr_engine.py
src/grabtl/core/translation/: __init__.py  argos.py  base.py
tests/unit/: test_capture.py  test_ocr.py  test_pipeline.py  test_translation.py
